# todoapp

./: .gitignore  CMakeLists.txt  README.md  data.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  subwindow.cpp  subwindow.h  subwindow.ui
data/: todo.json
deploy/data/: todo.json
model/: reminder.cpp  reminder.h  todo.cpp  todo.h
widgets/: cmdwidget.cpp  cmdwidget.h  cmdwidget.ui  subtodowidget.cpp  subtodowidget.h  subtodowidget.ui  todowidget.cpp  todowidget.h  todowidget.ui  voidwidget.cpp  voidwidget.h  voidwidget.ui
